Sun Feb 13 23:12:47 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_0): restore prot_tag before rewinding.

Sun Feb 13 16:56:52 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI.start): should set reason-phrase
	  to the value of status header field. ([ruby-dev:40617])

Sun Feb 13 11:38:40 2005  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regparse.c (type_cclass_hash): (Thanks Nobu) fixed
	  overrun. ([ruby-dev:25676]).

Sun Feb 13 10:53:08 2005  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* oniggnu.h, oniguruma.h, regcomp.c, st.c: imported
	  Oni Guruma 3.6.0.

Sun Feb 13 01:33:19 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (ERB::Util.h, u): make it module_function.

Sat Feb 12 22:17:11 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (TAG_THREAD): to start a new thread.

	* eval.c (ruby_init, ruby_options, ruby_cleanup, rb_protect,
	  rb_load_protect, rb_thread_start_0): make thread anchor.

	* eval.c (proc_alloc): clone proc object if klass is not Proc or
	  created in different thread.

	* eval.c (rb_block_pass): call a function with a block.  [new]

	* eval.c (rb_f_throw): raise NameError in main thread.

Sat Feb 12 17:29:19 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (OpenURI.open_loop): send authentication only for
	  the URI directly specified.

Sat Feb 12 15:07:23 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rand_init): suppress warning.

Sat Feb 12 14:10:24 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (OpenURI.open_http): reject userinfo explicitly.

Sat Feb 12 13:54:03 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb: support https if the platform provides CA
	  certificates.

Fri Feb 11 17:37:50 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openss/ossl_x509store.c (ossl_x509store_set_default_paths):
	  new method OpenSSL::X509::Store#set_default_paths.

Fri Feb 11 11:33:53 2005  Tanaka Akira  <akr@m17n.org>
