@@ -113,6 +113,8 @@ module RSS
         install_date_element(x, 'rfc822')
         install_model(x, occurs)
       end
+      alias date pubDate
+      alias date= pubDate=
 
       [
         ["skipDays", "?"],
